--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -24,8 +24,12 @@ UsePakFile=True
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
@@ -41,15 +45,55 @@ bCookMapsOnly=False
 bCompressed=True
 bEncryptIniFiles=False
 bEncryptPakIndex=False
+GenerateEarlyDownloaderPakFile=False
 bSkipEditorContent=False
 bSkipMovies=False
-+MapsToCook=(FilePath="/Game/Maps/Main")
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
+-EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
+-EarlyDownloaderPakFileFiles=...\Config\...\*.ini
+-EarlyDownloaderPakFileFiles=...\Config\*.ini
+-EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
+-EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
+-EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
+-EarlyDownloaderPakFileFiles=...\*.upluginmanifest
+-EarlyDownloaderPakFileFiles=...\*.uproject
+-EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
++EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
++EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
++EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
++EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
++EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
++EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
++EarlyDownloaderPakFileFiles=...\Config\...\*.ini
++EarlyDownloaderPakFileFiles=...\Config\*.ini
++EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
++EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
++EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
++EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
++EarlyDownloaderPakFileFiles=...\*.upluginmanifest
++EarlyDownloaderPakFileFiles=...\*.uproject
++EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
 +MapsToCook=(FilePath="/Game/Maps/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/TransitionMap")
 +MapsToCook=(FilePath="/Game/Maps/LobbyMap")
-+MapsToCook=(FilePath="/Game/Maps/TestMaps/TestMap_Persistent")
 +MapsToCook=(FilePath="/Game/Maps/MainLevel/MainLevel_Persistent")
-+MapsToCook=(FilePath="/Game/Maps/DemoB/DemoB_Persistent")
++MapsToCook=(FilePath="/Game/Maps/Credits")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
